--- a/Sites/index.html
+++ b/Sites/index.html
@@ -2,9 +2,16 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>Untitled Document</title>
+<title>Nohe427 HomePage</title>
+<link href="style.css" rel="stylesheet" type="text/css" media="screen">
 </head>
 
 <body>
+<p><img src="default.jpg" width="764" height="408" />
+</p>
+<p>&nbsp;</p>
+<p>Welcome to Nohe 427!</p>
+<p>To see the Google Javascript API in action please contact Nohe.</p>
+<p>Otherwise, continue to his wordpress page located here: <a href="\wordpress\">Wordpress for Nohe427</a></p>
 </body>
 </html>
