--- a/Wordpress/index.html
+++ b/Wordpress/index.html
@@ -10,16 +10,7 @@
     <script type="text/javascript"
       src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDSRTaIkL3cutch_FDdErfyBA6ZyodOyy8&sensor=false">
     </script>
-    <script type="text/javascript">
-      function initialize() {
-        var mapOptions = {
-          center: new google.maps.LatLng(-34.397, 150.644),
-          zoom: 8
-        };
-        var map = new google.maps.Map(document.getElementById("map-canvas"),
-            mapOptions);
-      }
-      google.maps.event.addDomListener(window, 'load', initialize);
+    <script type="text/javascript" src="script.js">
     </script>
   </head>
   <body>
