--- a/index.html
+++ b/index.html
@@ -12,6 +12,6 @@
 <p>&nbsp;</p>
 <p>Welcome to Nohe 427!</p>
 <p>To see the Google Javascript API in action please contact Nohe.</p>
-<p>Otherwise, continue to his GOOGLE MAPS page located here: <a href="\nohe427AWS\wordpress\">Wordpress for Nohe427</a></p>
+<p>Otherwise, continue to his GOOGLE MAPS page located here: <a href="\nohe427AWS\Wordpress\">Wordpress for Nohe427</a></p>
 </body>
 </html>
