--- a/Wordpress/index.html
+++ b/Wordpress/index.html
@@ -8,7 +8,7 @@
       #map-canvas { height: 100% }
     </style>
     <script type="text/javascript"
-      src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDSRTaIkL3cutch_FDdErfyBA6ZyodOyy8&sensor=false">
+      src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDSRTaIkL3cutch_FDdErfyBA6ZyodOyy8&sensor=false&libraries=weather">
     </script>
     <script type="text/javascript" src="script.js">
     </script>
