--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </p>
 <p>&nbsp;</p>
 <p>Welcome to Nohe 427!</p>
-<p>To see the Google Javascript API in action please contact Nohe.</p>
-<p>Otherwise, continue to his wordpress page located here: <a href="\wordpress\">Wordpress for Nohe427</a></p>
+<p>To see the Google Javascript API in action please </p>
+<p>continue to his wordpress page located here: <a href="\Weather\">Weather for Nohe427</a></p>
 </body>
 </html>
