--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 <meta charset="utf-8">
 <title>Nohe427 HomePage</title>
 <link href="style.css" rel="stylesheet" type="text/css" media="screen">
+<script type="text/javascript" src="//use.typekit.net/jjr2xut.js"></script>
+<script type="text/javascript">try{Typekit.load();}catch(e){}</script>
 </head>
 
 <body>
